--- a/src/test/resources/app.properties
+++ b/src/test/resources/app.properties
@@ -6,9 +6,9 @@ app.mode=dev
 ################ Main Datasource settings ##################
 ds.main.jndiName=java:/comp/env/jdbc/realpaasdb
 ds.main.driverClassName=com.mysql.jdbc.Driver
-ds.main.url=jdbc:mysql://localhost:3316/realpaasdb
-ds.main.username=realpaas
-ds.main.password=realpaas
+ds.main.url=jdbc:mysql://localhost:3306/realpaasdb
+ds.main.username=root
+ds.main.password=
 ds.main.schema=
 ds.main.catalog=
 
